--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "create-admin": "node src/scripts/createAdmin.js",
+    "drop-old-index": "node src/scripts/dropOldRegistrationIndex.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
